# pyproject.toml
[build-system]
requires = [
	"flit_core >=3.2,<4",
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "prims_algorithm"
authors = [{name = "Caroline Huang", email = "caroline.huang2@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest",
    "numpy",
    "scikit-learn"
]

requires = [
	"flit_core >=3.2,<4"
	]

python_version = ">='3.7'"

[project.urls]
Home = "https://github.com/carolinehhuang/HW3-PRIM-MST.git"